Fix z-index of drag proxy and target indicator

--- a/src/less/goldenlayout-base.less
+++ b/src/less/goldenlayout-base.less
@@ -364,7 +364,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 30;
+  z-index: 31;
 
   .lm_header {
     background: transparent;
@@ -380,7 +380,7 @@
 .lm_dropTargetIndicator {
   display: none;
   position: absolute;
-  z-index: 35;
+  z-index: 30;
   transition: all 200ms ease;
 
   // Inner Placeholder
