--- a/src/scss/goldenlayout-base.scss
+++ b/src/scss/goldenlayout-base.scss
@@ -364,7 +364,7 @@ $height6: 15px; // Appears 1 time
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 30;
+  z-index: 31;
 
   .lm_header {
     background: transparent;
@@ -380,7 +380,7 @@ $height6: 15px; // Appears 1 time
 .lm_dropTargetIndicator {
   display: none;
   position: absolute;
-  z-index: 35;
+  z-index: 30;
   transition: all 200ms ease;
 
   // Inner Placeholder
